Add folder for images, modify spaghetti.html to display recipe

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>How to make bolognese spaghetti</title>
 </head>
 <body>
-    <h1>Recipe for spaghetti</h1>
+    <h1>Recipe for bolognese spaghetti</h1>
+    <p><img src="../odin-recipes-images/spaghetti.jpg"></p>
+    <h2>Description</h2>
+    <p>The recipe for spaghetti is very simple. The longest part is the bolognese sauce which i'ts all about the tomatoes, followed by the meat and finally the pasta itself.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1/2 kilo of red tomato</li>
+        <li>400g of Red Tomato puree</li>
+        <li>1/2 big white onion</li>
+        <li>2 pieces of garlic</li>
+        <li>1/2 tsp oregano</li>
+        <li>2 tbsp butter</li>
+        <li>2 tbsp olive oil</li>
+        <li>400g ground beef</li>
+        <li>1/2 of a bread's crumb</li>
+        <li>1 pinch of salt</li>
+        <li>1/2 big white onion</li>
+        <li>2 pieces of garlic</li>
+        <li>Spaghetti pasta</li>
+    </ul>
+    <h4>Steps (ya los voy a poner en español) (nomas pa la salsa)</h4>
+    <ol>
+        <li>Hervir los jitomates 4 minutos lumbre media alta hasta que se les reviente la cascara. Dejar enfriar.</li>
+        <li>Picar el ajo y la cebolla muy finos</li>
+        <li>Pelar los jitomates y picarlos finos</li>
+        <li>En la estufa, derretir la mantequilla en una olla y echarle el aceite de oliva</li>
+        <li>Agregar la cebolla picada al aceite 4 minutos a fuego medio alto</li>
+        <li>Agregar el ajo y el oregano y moverlo menos de un minuto</li>
+        <li>Añadir el jitomate picado</li>
+        <li>Dos minutos despues incorporar el pure de jitomate y la sal, revolver</li>
+        <li>(Opcional) Añadir 3 o 4 hojas de albahaca</li>
+        <li>Una vez que hierva bajar el fuego y dejar que se cocine una media hora</li>
+    </ol>
 </body>
 </html>
