Added cereal.html to recipes and cereal.jpg to images dir

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How to make bolognese spaghetti</title>
+    <title>Bolognese sauce</title>
 </head>
 <body>
     <h1>Recipe for bolognese spaghetti</h1>
@@ -27,18 +27,18 @@
         <li>2 pieces of garlic</li>
         <li>Spaghetti pasta</li>
     </ul>
-    <h4>Steps (ya los voy a poner en español) (nomas pa la salsa)</h4>
+    <h4>Steps (only for the bolognese sauce)</h4>
     <ol>
-        <li>Hervir los jitomates 4 minutos lumbre media alta hasta que se les reviente la cascara. Dejar enfriar.</li>
-        <li>Picar el ajo y la cebolla muy finos</li>
-        <li>Pelar los jitomates y picarlos finos</li>
-        <li>En la estufa, derretir la mantequilla en una olla y echarle el aceite de oliva</li>
-        <li>Agregar la cebolla picada al aceite 4 minutos a fuego medio alto</li>
-        <li>Agregar el ajo y el oregano y moverlo menos de un minuto</li>
-        <li>Añadir el jitomate picado</li>
-        <li>Dos minutos despues incorporar el pure de jitomate y la sal, revolver</li>
-        <li>(Opcional) Añadir 3 o 4 hojas de albahaca</li>
-        <li>Una vez que hierva bajar el fuego y dejar que se cocine una media hora</li>
+        <li>Boil tomatos for 4 minutes and let them cool down</li>
+        <li>Chop onion and garlic very fine</li>
+        <li>Peel tomatoes and chop them finely</li>
+        <li>Melt butter and olive oil in the pot</li>
+        <li>Add chopped onion to the pot 4 minutes medium high heat</li>
+        <li>Add garlic and oregano and stir for less than 1 minute</li>
+        <li>Add chopped tomatoes</li>
+        <li>Two minutes after add tomato puree and salt, stir well</li>
+        <li>(Optional) Add 3 or 4 basil leaves</li>
+        <li>Once it boils turn the heat down and let it boil for half an hour</li>
     </ol>
 </body>
 </html>
