Update index.html to display all recipes in a list

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/spaghetti.html">Recipe for spaghetti</a>
+    <ul>
+        <li><a href="./recipes/spaghetti.html">Recipe for spaghetti</a></li>
+        <li><a href="./recipes/cereal.html">Recipe for cereal</a></li>
+        <li><a href="./recipes/quesadilla.html">Recipe for quesadillas</a></li>
+    </ul>
+    
 </body>
 </html>
